--- a/client/src/components/TimerBar.css
+++ b/client/src/components/TimerBar.css
@@ -1,17 +1,40 @@
 .timer-bar-container {
     position: relative;
+    background-color: #999; /* A neutral background for the empty part of the bar */
+}
+
+/* Mobile-first: Horizontal bar */
+.timer-bar-container {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    width: 100%; /* Default to horizontal */
     height: 2em;
 }
 
-.timer-background-red {
-    background-color: red;
+.timer-fill {
     transform-origin: right;
+    transform: scaleX(var(--scale-ratio, 1));
     height: 100%;
+    background-color: red; /* The end color of the timer */
 }
 
-.timer-fill-green {
-    background-color: green;
+/* Desktop: Vertical bar */
+@media (min-width: 768px) {
+    .timer-bar-container {
+        width: 5ch; /* Switch to vertical */
+        height: auto;
+    }
+
+    .timer-fill {
+        transform-origin: bottom;
+        transform: scaleY(var(--scale-ratio, 1));
+    }
+}
+
+.timer-fill-color {
     height: 100%;
+    background-color: green; /* The start color, which fades out */
 }
 
 .timer-bar-text {
@@ -20,7 +43,4 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
