--- a/client/src/components/RackScore.css
+++ b/client/src/components/RackScore.css
@@ -1,13 +1,17 @@
 .rack-score {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 0.5em;
-    width: 20%;
+    justify-content: center;
+}
+
+@media (min-width: 768px) {
+    .rack-score {
+        width: 20%;
+    }
 }
 
 .score-piece {
-    flex: 1 1 3ch;
     text-align: center;
     min-width: 2ch;
 }
