--- a/client/src/components/TimerBar.css
+++ b/client/src/components/TimerBar.css
@@ -5,7 +5,7 @@
 
 /* Mobile-first: Horizontal bar */
 .timer-bar-container {
-    font-size: 1.5em;
+    font-size: var(--timer-font-size);
     font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     width: 100%; /* Default to horizontal */
@@ -22,7 +22,7 @@
 /* Desktop: Vertical bar */
 @media (min-width: 768px) {
     .timer-bar-container {
-        width: 5ch; /* Switch to vertical */
+        width: var(--timer-width);
         height: auto;
     }
 
