--- a/client/src/components/WordRacks.css
+++ b/client/src/components/WordRacks.css
@@ -1,3 +1,9 @@
+.word-racks {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 .drag-preview {
     border: 1px dashed green;
 }
