--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,4 +18,6 @@
 
 h1 {
     text-align: center;
+    /* Reduce the default browser margin to tighten up vertical spacing */
+    margin-block-end: 0;
 }
