--- a/client/src/components/game/Game.css
+++ b/client/src/components/game/Game.css
@@ -95,6 +95,14 @@ button:hover {
     background-color: var(--primary-color-hover);
 }
 
+button:disabled {
+    background: var(--disabled);
+    color: var(--disabled-text);
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
+
 @media (min-width: 768px) {
     /* Desktop: Flex direction row to put timer to left of racks */
     .game-board {
